Add /friends & swagger (friends)
